created auth middleware and get logget user
