# main.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"goblog/controllers"
+	"goblog/middleware"
 	"goblog/models"
 
 	_ "goblog/docs"
@@ -11,14 +12,16 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-//	@securityDefinitions.apiKey	JWT
-//	@in							header
-//	@name						token
+// @securityDefinitions.apiKey	ApiKeyAuth
+// @in							header
+// @name						token
 func main() {
 	r := gin.Default()
 	models.ConnectDatabase()
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.POST("/user/login", controllers.Login)
+	r.Use(middleware.AuthMiddleware).GET("/user", controllers.GetLoggedInUser)
+
 	r.Run()
 }
